assert(r != 0) failed: invalid

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • b59

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/203123.amurillo/s/src/share/vm/oops/methodData.hpp:693), pid=24235, tid=2783968112
        # assert(r != 0) failed: invalid
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b113) (build 1.8.0-ea-fastdebug-b113)
        # Java VM: Java HotSpot(TM) Server VM (25.0-b56-internal-201310252031.amurillo.hs25-b56-snapshot-fastdebug mixed mode linux-x86 )
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0xa5f29400): VMThread [stack: 0xa5e7f000,0xa5f00000] [id=24249]

        Stack: [0xa5e7f000,0xa5f00000], sp=0xa5efe860, free space=510k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xdadff5] VMError::report_and_die()+0x185
        V [libjvm.so+0x5c6aa8] report_vm_error(char const*, int, char const*, char const*)+0x68
        V [libjvm.so+0xaebf3a] TypeStackSlotEntries::clean_weak_klass_links(BoolObjectClosure*)+0x6a
        V [libjvm.so+0x49c200] CallTypeData::clean_weak_klass_links(BoolObjectClosure*)+0x60
        V [libjvm.so+0x777484] InstanceKlass::clean_method_data(BoolObjectClosure*)+0x54
        V [libjvm.so+0x9e08ec] Klass::clean_weak_klass_links(BoolObjectClosure*)+0x24c
        V [libjvm.so+0xbfc187] PSParallelCompact::marking_phase(ParCompactionManager*, bool, ParallelOldTracer*)+0x4c7
        V [libjvm.so+0xc07147] PSParallelCompact::invoke_no_policy(bool)+0x4c7
        V [libjvm.so+0xc07fbc] PSParallelCompact::invoke(bool)+0xdc
        V [libjvm.so+0x51a2f9] CollectedHeap::collect_as_vm_thread(GCCause::Cause)+0x199
        V [libjvm.so+0xdaf43d] VM_CollectForMetadataAllocation::doit()+0x1bd
        V [libjvm.so+0xddaf4a] VM_Operation::evaluate()+0x9a
        V [libjvm.so+0xdd8704] VMThread::evaluate_operation(VM_Operation*)+0x124
        V [libjvm.so+0xdd91da] VMThread::loop()+0x65a
        V [libjvm.so+0xdd9451] VMThread::run()+0xc1
        V [libjvm.so+0xb72559] java_start(Thread*)+0x119
        C [libpthread.so.0+0x69e9] abort@@GLIBC_2.0+0x69e9

        VM_Operation (0xa545bdc8): CollectForMetadataAllocation, mode: safepoint, requested by thread 0xa5778c00

              Assignee:
              Roland Westrelin
              Reporter:
              Igor Ignatyev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: