8027572: assert(r != 0) failed: invalid

Null classes should be expected in profiles with conflicts

Reviewed-by: kvn, iveresov